--- a/index.html
+++ b/index.html
@@ -32,12 +32,25 @@
 	  <!-- <a href="#Other">Other</a> &nbsp -->
 	  <a href="#Contact">Contact</a></b> </h3>
 	<br><br>
+
+	Starting next october, I will be a research engineer / post-doctoral
+	researcher at INRIA Bordeaux within the <strong> <a href="https://team.inria.fr/storm/">
+	    STORM </a> </strong> team, notably under the
+	supervision of <strong> <a href = "https://people.bordeaux.inria.fr/olivier.aumage/">
+	    Olivier Aumage </a> </strong>. I will be working towards integrating
+	error-correcting codes used in post-quantum cryptography in
+	the <strong> <a href="https://team.inria.fr/storm/software/aff3ct/">AFF3CT</a> </strong>
+	software. </br> </br>
 	
-	I am currently a post-doctoral researcher at University of Rennes, CNRS,
+	
+	From june 2021 to septembre 2023, I have been a post-doctoral researcher
+	at University of Rennes, CNRS,
 	IRISA, working within the
-	<strong> <a href="https://team.inria.fr/capsule/">CAPSULE</a> </strong>
+	<strong> <a href="https://team.inria.fr/capsule/"> CAPSULE </a> </strong>
 	team under the supervision of
 	<a href="https://people.irisa.fr/Adeline.Roux-Langlois/">Adeline Roux-Langlois.</a>
+	</br> </br>
+	
 
 	Previously, I was a Ph.D. student at <i><a href="https://www.uow.edu.au/"> University of Wollongong, Australia </a> </i> under the supervision of <i><a href="https://sites.google.com/view/willy-susilo/">Willy Susilo</a></i> and <i><a href="https://thomas-plantard.github.io/">Thomas Plantard</a></i>.</br> </br>
 
