--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	  <a href="#Contact">Contact</a></b> </h3>
 	<br><br>
 
-	Starting next october, I will be a research engineer / post-doctoral
+	I am now a research engineer / post-doctoral
 	researcher at INRIA Bordeaux within the <strong> <a href="https://team.inria.fr/storm/">
 	    STORM </a> </strong> team, notably under the
 	supervision of <strong> <a href = "https://people.bordeaux.inria.fr/olivier.aumage/">
@@ -54,13 +54,13 @@
 
 	Previously, I was a Ph.D. student at <i><a href="https://www.uow.edu.au/"> University of Wollongong, Australia </a> </i> under the supervision of <i><a href="https://sites.google.com/view/willy-susilo/">Willy Susilo</a></i> and <i><a href="https://thomas-plantard.github.io/">Thomas Plantard</a></i>.</br> </br>
 
-	Here is my (french) <a href=CV_lesav.pdf>CV</a>.
+	Here is my (not up to date and in french) <a href=CV_lesav.pdf>CV</a>.
 	
 	<br><br>
 	
 	<h2 id="Contact">Contact</h2>
 	<ul>				
-	  <li> Mail: <i>andrea(dot)lesavourey(at)irisa(dot)fr </i> </li>
+	  <li> Mail: <i>andrea(dot)lesavourey(at)protonmail(dot)com </i> </li>
 	</ul>
 
 	<hr>
