--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Andrea Lesavourey</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async
+            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
   </head>
 
   
@@ -83,9 +87,7 @@
 
 	<h3 id="Eprints">Preprints</h3>
 	<ol>
-	  <li> <i><a href="https://arxiv.org/abs/2305.17425"> Computing $e$-th roots in number fields</a></i>, with Olivier Bernard and Pierre-Alain Fouque.</li> <br>
-
-	  
+	  	  
 	  <li> <i><a href="https://hal.archives-ouvertes.fr/hal-03608840v1">Computing roots of polynomials over number fields using complex embeddings</i></a>, 
 	    <a href="https://sites.google.com/view/willy-susilo/">Willy Susilo</a> and <a href="https://thomas-plantard.github.io/">Thomas Plantard</a>. <br>
 	    Code available <a href="https://github.com/AndLesav/nf_polynomial_roots">here</a>
@@ -108,6 +110,10 @@
 	<h3 id="Conference">Conference Papers</h3>
 	<!-- <ol type="3"> -->
 	  <ol>
+	    <li> <i><a href="https://arxiv.org/abs/2305.17425"> Computing \(e\)-th roots in number fields</a></i>, with Olivier Bernard and Pierre-Alain Fouque. <br>
+	      <a href= "https://www.siam.org/conferences/cm/conference/alenex24" > SIAM Symposium on Algorithm Engineering and Experiments (ALENEX24).</a>
+	    </li> <br>
+	    
 	    <li> <i><a href="https://eprint.iacr.org/2021/1384">Log-S-unit lattices using Explicit Stickelberger Generators to solve Approx Ideal-SVP</i></a>, 
 	      with Olivier Bernard, Tuong-Huy Nguyen, and <a href="https://people.irisa.fr/Adeline.Roux-Langlois/">Adeline Roux-Langlois.</a> <br>
 	      <a href= "https://asiacrypt.iacr.org/2022/" > ASIACRYPT 2022.</a>
@@ -133,7 +139,7 @@
 	  
 	  <h3 id="notes">Notes and works in progress</h3>
 	  <ol>
-	    	    <li> <i>Covering Radius and First Minima Bound on Diagonally Dominant Lattices in the l$_\infty$-norm</i>, 
+	    	    <li> <i>Covering Radius and First Minima Bound on Diagonally Dominant Lattices in the l\(_\infty\)-norm</i>, 
 	      with <a href="https://thomas-plantard.github.io/">Thomas Plantard</a> and Arnaud Sipasseuth.
 	      <br> Accepted for presentation to <a href= "http://nutmic2021.amu.edu.pl/index.html" > Number-Theoretic Methods in Cryptology (Nutmic) 2021.</a>
 	    </li>
