--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 	Previously, I was a Ph.D. student at <i><a href="https://www.uow.edu.au/"> University of Wollongong, Australia </a> </i> under the supervision of <i><a href="https://sites.google.com/view/willy-susilo/">Willy Susilo</a></i> and <i><a href="https://thomas-plantard.github.io/">Thomas Plantard</a></i>.</br> </br>
 
-	Here is my (not up to date and in french) <a href=CV_lesav.pdf>CV</a>.
+	Here is my (maybe not up to date and in french) <a href=CV_lesav.pdf>CV</a>.
 	
 	<br><br>
 	
