affect users' day

--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
 	  <h2 id="Presentations">Presentations and talks</h2>
 	  <h3>Summer schools and workshops</h3>
 	  <ol>
+	    <li> <a href="https://sourcesup.renater.fr/www/orga-jncf/"> Journée uilisateurs AFF3CT, 2023
+	      </a>
+	      <br> <i> AFF3CT et cryptographie post-quantique.</i>
+	    </li>
+	    </br>
+
+	    
 	    <li> <a href="https://sourcesup.renater.fr/www/orga-jncf/"> Journées Nationales du Calcul Formel (JNCF), 2023
 	      </a>
 	      <br> <i> Computing roots in number fields</i>
@@ -219,7 +226,7 @@
 	  <a href="https://ssl.informatics.uow.edu.au/MACAO/workshop_2019.html"> MACAO. </a>
 
 	  <h3>Editorial work</h3>
-	  I have been a sub-reviewer for the conferences ACISP 2020 and 2022, PKC 2023 and Asiacrypt 2023.
+	  I have been a sub-reviewer for the conferences ACISP 2020 and 2022, PKC 2023, Asiacrypt 2023 and Eurocrypt 2024.
 	
 	  <hr>
 
