lien aff3ct day

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 	  <h2 id="Presentations">Presentations and talks</h2>
 	  <h3>Summer schools and workshops</h3>
 	  <ol>
-	    <li> <a href="https://sourcesup.renater.fr/www/orga-jncf/"> Journée utilisateurs AFF3CT, 2023
+	    <li> <a href="https://fec.gitlabpages.inria.fr/aff3ct_user_day/"> Journée utilisateurs AFF3CT, 2023
 	      </a>
 	      <br> <i> AFF3CT et cryptographie post-quantique.</i>
 	    </li>
