--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 	<h3 id="Eprints">Preprints</h3>
 	<ol>
 
-	  <li> <b>Diagonally dominant matrices for cryptography.</b></br>
-	    With Thomas Plantard and Arnaud Sipasseuth. </br>
-	    Document soon available, follow-up on the note found below.
+	  <li> <b> <a href="https://hal.science/hal-03728051v2">Diagonally dominant matrices for cryptography.</a></b></br>
+	    With Kazuhide Fukushima, Thomas Plantard and Arnaud Sipasseuth. </br>
+	    Follow-up on the note found below.
 	    </li> </br>
 	    
 	    
