--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 	  <a href="https://ssl.informatics.uow.edu.au/MACAO/workshop_2019.html"> MACAO. </a>
 
 	  <h3>Editorial work</h3>
-	  I have been a sub-reviewer for the conferences ACISP 2020 and 2022, PKC 2023, Asiacrypt 2023 and Eurocrypt 2024.
+	  I have been a sub-reviewer for the conferences ACISP 2020 and 2022, PKC 2023, Asiacrypt 2023, Eurocrypt 2024 and ISSAC 2024.
 	
 	  <hr>
 
@@ -268,6 +268,11 @@
 	    </li>
 	  </ul>
 
+	  <h4>Second semester 2022-2023</h4>
+	  <ul>
+	    <li> <i> Cryptography </i> (Master 1, IRMAR, Rennes, France)
+	      <br> Lab sessions. </li>
+	  </ul>
 	  
 	  <h4>First semester 2022-2023</h4>
 	  <ul>
