--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
 	  <h4>Second semester 2023-2024</h4>
 	  <ul>
-	    <li> <i>  Cryptologie </i>  (Second year (eq. Master 1), Enseirb, Bordeaux)
+	    <li> <i>  <a href="./crypto-enseirb.html">Cryptologie</a> </i>  (Second year (eq. Master 1), Enseirb, Bordeaux)
 	      <br> Tutorial and lab sessions. 
 	    </li> <br>
 	    <li> <i> Systèmes d'exploitation </i> (Second year (eq. Master 1), Enseirb, Bordeaux)
