--- a/crypto-enseirb.html
+++ b/crypto-enseirb.html
@@ -35,7 +35,8 @@
 	
 	<a href="./index.html">Andrea Lesavourey</a> <br>
 	<script language="javascript"> 
-	  months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']; 
+	  months = ['January', 'February', 'March', 'April', 'May', 'June', 'July',
+	  'August', 'September', 'October', 'November', 'December'];  
 	  var d=new Date();
 	  var theDate = new Date(document.lastModified); 
 	  theDate.setTime((theDate.getTime()+(60*60)) ) 
