--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 	    <!-- <a href="#Other">Other</a> &nbsp -->
 	    <a href="#Contact">Contact</a></b> </h3>
 
-	<p> I am now an assistant professor (maître de conférences) in Limoges. I am working at the IUT du Limousin within the MMI department,
-	  and at the XLIM research laboratory within the Cryptis team.</p>.
+	<p> I am now an assistant professor (maître de conférences) in Limoges. I am
+	  working at the IUT du Limousin within the <a href="https://www.iut.unilim.fr/les-formations/but/metiers-du-multimedia-et-de-linternet/">MMI department</a>,
+	  and at the XLIM research laboratory within the
+	  <a href="https://www.xlim.fr/recherche/pole-mathematiques-informatique-image/mathematiques-securite-de-linformation/cryptis">Cryptis</a> team.</p>
 
 	<p> During the past year I was research engineer / post-doctoral
 	  researcher at INRIA Bordeaux within the <strong> <a href="https://team.inria.fr/storm/"> STORM </a> </strong>
