--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
 	
 	<h2 id="Contact">Contact</h2>
 	<ul>				
-	  <li> Mail: <i>andrea(dot)lesavourey(at)inria(dot)fr </i> or
-	    <i>andrea(dot)lesavourey(at)protonmail(dot)com </i> </li>
+	  <li> Mail: <i>andrea(dot)lesavourey(at)protonmail(dot)com </i> </li>
 	</ul>
 
 	<hr>
