--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	  at University of Rennes, CNRS, IRISA, working within the
 	  <a href="https://team.inria.fr/capsule/"> CAPSULE </a>
 	  team under the supervision of
-	  <a href="https://people.irisa.fr/Adeline.Roux-Langlois/">Adeline
+	  <a href="https://langloi227.users.greyc.fr/">Adeline
 	    Roux-Langlois.</a> </p>
 
 	
@@ -62,7 +62,7 @@
 	
 	<h2 id="Contact">Contact</h2>
 	<ul>				
-	  <li> Mail: <i>andrea(dot)lesavourey(at)protonmail(dot)com </i> </li>
+	  <li> Mail: <i>andrea(dot)lesavourey(at)unilim(dot)fr </i> </li>
 	</ul>
 
 	<hr>
