--- a/recherche.html
+++ b/recherche.html
@@ -99,13 +99,13 @@
 	    <br>
 	    
 	    <li> <b>Efficient Leak Resistant Modular Exponentiation in RNS</b>. </br>
-	      With <a href="http://perso.univ-perp.fr/christophe.negre/">C. Negre</a> and <a href="https://thomas-plantard.github.io/">T. Plantard</a>.    </br>
+	      With <a href="http://perso.univ-perp.fr/christophe.negre/">Christophe Negre</a> and <a href="https://thomas-plantard.github.io/">Thomas Plantard</a>.    </br>
 	      Proceedings of <a href="http://arith24.arithsymposium.org">ARITH 24</a>. 24th IEEE Symposium on Computer Arithmetic. London, England, July 24-26, 2017, pages 156-163.
 	    </li>
 	    </br>
 
 	    <li> <b>Efficient Randomized Regular Modular Exponentiation using Combined Montgomery and Barrett Multiplications</b>. </br>
-	      With <a href="http://perso.univ-perp.fr/christophe.negre/">C. Negre</a> and <a href="https://thomas-plantard.github.io/">T. Plantard</a>.  </br>
+	      With <a href="http://perso.univ-perp.fr/christophe.negre/">Christophe Negre</a> and <a href="https://thomas-plantard.github.io/">Thomas Plantard</a>.  </br>
 	      <a href="http://www.secrypt.icete.org">SECRYPT 2016</a>. The 13th International Conference on Security and Cryptography. Lisbon, Portugal, July 26-28, 2016, pages 368-375.
 	    </li>
 	  </ol>
