--- a/recherche.html
+++ b/recherche.html
@@ -24,7 +24,7 @@
 	    <a href="./cours.html" class="btn">Teaching</a>  &nbsp
 	    <!-- <a href="#Other">Other</a> &nbsp -->
 	    <a href="./presentations.html" class="btn">Presentations and talks</a>  &nbsp
-	    <a href="#Contact" class="btn">Contact</a></b>
+	  </b>
 	</h3>
 
 	<h2 id="Research">Research</h2>
@@ -52,11 +52,11 @@
 	  </li> </br>
 	  
 	  
-	  <li> <b>Computing roots of polynomials over number fields using complex embeddings</b>.
-	    [<a href="https://hal.archives-ouvertes.fr/hal-03608840v1">HAL</a>]</br>
-	    With <a href="https://sites.google.com/view/willy-susilo/">Willy Susilo</a> and <a href="https://thomas-plantard.github.io/">Thomas Plantard</a>. <br>
-	    Code available <a href="https://github.com/AndLesav/nf_polynomial_roots">here</a>
-	  </li><br>
+	  <!-- <li> <b>Computing roots of polynomials over number fields using complex embeddings</b>. -->
+	  <!--   [<a href="https://hal.archives-ouvertes.fr/hal-03608840v1">HAL</a>]</br> -->
+	  <!--   With <a href="https://sites.google.com/view/willy-susilo/">Willy Susilo</a> and <a href="https://thomas-plantard.github.io/">Thomas Plantard</a>. <br> -->
+	  <!--   Code available <a href="https://github.com/AndLesav/nf_polynomial_roots">here</a> -->
+	  <!-- </li><br> -->
 	  
 	  <li> <b>On the Short Principal Ideal Problem over some real Kummer fields</b>. [<a href="https://eprint.iacr.org/2021/1623">ePrint</a>]</br>
 	    With <a href="https://sites.google.com/view/willy-susilo/">Willy Susilo</a> and <a href="https://thomas-plantard.github.io">Thomas Plantard</a>. <br>
@@ -68,6 +68,13 @@
 	
 	<h3 id="Journal">Journal Papers</h3>
 	<ol>
+	  <li> <b>Computing roots of polynomials over number fields using complex 	      embeddings</b>.
+	    [<a href="https://hal.archives-ouvertes.fr/hal-03608840v1">HAL</a>]</br>
+	    With <a href="https://sites.google.com/view/willy-susilo/">Willy Susilo</a> and <a href="https://thomas-plantard.github.io/">Thomas Plantard</a>. <br>
+	    Accepted for publication to <a href="https://www.sciencedirect.com/journal/journal-of-computational-algebra">Journal of Computational Algebra.</a> <br>
+	    Code available <a href="https://github.com/AndLesav/nf_polynomial_roots">here</a>
+	  </li><br>
+	  
 	  <li> <b><a href=" https://doi.org/10.1515/jmc-2019-0028">Short Principal Ideal Problem in multicubic fields</b></a>. </br>
 	    With <a href="https://sites.google.com/view/willy-susilo/">Willy Susilo</a> and <a href="https://thomas-plantard.github.io/">Thomas Plantard</a>.   </br>
 	    <a href="https://www.degruyter.com/view/journals/jmc/jmc-overview.xml">Journal of Mathematical Cryptology</a>, 14(1), 359-392. <br>
