--- a/recherche.html
+++ b/recherche.html
@@ -45,7 +45,6 @@
 
 	<h3 id="Eprints">Preprints</h3>
 	<ol>
-
 	  <li> <b> Diagonally dominant matrices for cryptography.</b> [<a href="https://hal.science/hal-03728051v2">HAL</a>, <a href="./docs/DRS-DRE.pdf">PDF</a>] </br>
 	    With Kazuhide Fukushima, <a href="https://thomas-plantard.github.io/">Thomas Plantard</a> and Arnaud Sipasseuth.</br>
 	    Follow-up on the note found below.
@@ -68,8 +67,10 @@
 	
 	<h3 id="Journal">Journal Papers</h3>
 	<ol>
-	  <li> <b>Computing roots of polynomials over number fields using complex 	      embeddings</b>.
-	    [<a href="https://hal.archives-ouvertes.fr/hal-03608840v1">HAL</a>]</br>
+	  
+	  
+	  <li> <b>Improved computation of polynomial roots over number fields when using complex embeddings</b>.
+	    [<a href="https://doi.org/10.1016/j.jaca.2024.100026">DOI</a>]</br>
 	    With <a href="https://sites.google.com/view/willy-susilo/">Willy Susilo</a> and <a href="https://thomas-plantard.github.io/">Thomas Plantard</a>. <br>
 	    Accepted for publication to <a href="https://www.sciencedirect.com/journal/journal-of-computational-algebra">Journal of Computational Algebra.</a> <br>
 	    Code available <a href="https://github.com/AndLesav/nf_polynomial_roots">here</a>
