--- a/recherche.html
+++ b/recherche.html
@@ -8,6 +8,7 @@
     <script id="MathJax-script" async
             src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
     </script>
+    <link rel="icon" href="lock-solid.svg" sizes="any" type="image/svg+xml">
   </head>
   
   <body>		  
